--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,5 @@
   <div id="root"></div>
   <div id="modals_gallery"></div>
 </body>
-
+<script src="https://unpkg.com/boxicons@2.1.1/dist/boxicons.js"></script>
 </html>
